--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
   --text-color: #010b46;
   --accent-color: #071ed9; /*ex; underlines på länkar i nav*/
   --white: #ffffff; /*ex; bakgrundfärg eller textfärg på blå eller mörk bakgrund*/
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 * {
@@ -14,7 +15,6 @@
 
 header {
   background-color: var(--primary-color);
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 li {
@@ -73,6 +73,68 @@ li a {
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
   background-color: var(--accent-color);
+}
+
+#main {
+  padding: 8% 5%;
+  height: 200vh;
+  background: linear-gradient(var(--primary-color) 45%, var(--white) 0%);
+}
+
+#introContainer {
+  color: var(--text-color);
+  width: 100%;
+
+  h1 {
+    font-size: 5rem;
+    margin-bottom: 2rem;
+  }
+
+  h2 {
+    font-size: 1.7rem;
+    margin-bottom: 0.3rem;
+  }
+
+  p {
+    font-size: 1.7rem;
+    margin-bottom: 5%;
+    line-height: 2.2rem;
+    width: 65%;
+  }
+
+  .btnSecondary {
+    margin-right: 30px;
+  }
+}
+
+.btn {
+  border: none;
+  border-radius: 50px;
+  padding: 0.8rem 1.7rem;
+  font-size: 1.1rem;
+}
+
+.btnPrimary {
+  background-color: var(--secondary-color);
+  color: var(--white);
+
+  &:hover {
+    background-color: var(--white);
+    border: 2px solid var(--text-color);
+    color: var(--text-color);
+  }
+}
+
+.btnSecondary {
+  background-color: transparent;
+  border: 2px solid var(--text-color);
+  color: var(--text-color);
+
+  &:hover {
+    background-color: var(--secondary-color);
+    border: 2px solid transparent;
+    color: var(--white);
+  }
 }
 
 @media (max-width: 1024px) {
