--- a/src/style.css
+++ b/src/style.css
@@ -77,6 +77,7 @@ li a {
 
 #main {
   padding: 8% 5%;
+  width: 100%;
   height: 200vh;
   background: linear-gradient(var(--primary-color) 45%, var(--white) 0%);
 }
@@ -84,6 +85,7 @@ li a {
 #introContainer {
   color: var(--text-color);
   width: 100%;
+  margin-bottom: 7rem;
 
   h1 {
     font-size: 5rem;
@@ -134,6 +136,28 @@ li a {
     background-color: var(--secondary-color);
     border: 2px solid transparent;
     color: var(--white);
+  }
+}
+
+#imgSection {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  width: 90%;
+  margin: auto;
+
+  div {
+    width: 300px;
+    height: 200px;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 8px 8px 15px darkgray;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 }
 
