--- a/src/style.css
+++ b/src/style.css
@@ -161,6 +161,35 @@ li a {
   }
 }
 
+#textSectionStartpage {
+  margin-top: 5rem;
+  text-align: center;
+  font-size: 2rem;
+  line-height: 2.8rem;
+}
+
+#service {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 4rem;
+  font-size: 1.5rem;
+
+  p {
+    margin-right: 5rem;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  i {
+    margin-right: 1rem;
+    padding: 0;
+    color: var(--accent-color);
+  }
+}
+
 @media (max-width: 1024px) {
   .hamburger {
     display: block;
