--- a/src/style.css
+++ b/src/style.css
@@ -114,6 +114,7 @@ li a {
   border-radius: 50px;
   padding: 0.8rem 1.7rem;
   font-size: 1.1rem;
+  cursor: pointer;
 }
 
 .btnPrimary {
@@ -166,6 +167,11 @@ li a {
   text-align: center;
   font-size: 2rem;
   line-height: 2.8rem;
+
+  button:hover {
+    background-color: var(--primary-color);
+    border: none;
+  }
 }
 
 #service {
@@ -174,6 +180,7 @@ li a {
   align-items: center;
   margin-top: 4rem;
   font-size: 1.5rem;
+  margin-bottom: 3rem;
 
   p {
     margin-right: 5rem;
