--- a/style.css
+++ b/style.css
@@ -1,179 +1,125 @@
-*,
-*::after,
-*::before {
-  box-sizing: border-box;
-}
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  
-  --bar-width: 60px;
-  --bar-height: 8px;
-  --hamburger-gap: 6px;
-  --hamburger-margin: 5px;
-  --animation-timing: 200ms ease-in-out;
-  --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
+.header {
+  position: fixed;
+  width: 100%;
+  z-index: 3;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.header > .logo > img {
+  width: 200px;
 }
-a:hover {
-  color: #535bf2;
-}
-
-body {
+.header ul {
   margin: 0;
-  display: flex;
-  /* place-items: center; */
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  list-style: none; 
+  overflow: hidden;
 }
-.hamburger-menu {
+.header li a {
+  display: block;
+  padding: 20px 20px;
+  text-decoration: none;
+}
+.header li a:hover,
+.header .menu-btn:hover {
+  background-color: #f4f4f4;
+}
+
+.header .logo {
+  display: block;
+  float: left;
+  font-size: 2em;
+  padding: 10px 20px;
+  text-decoration: none;
+}
+
+/* menu */
+
+.header .menu {
+  clear: both;
+  max-height: 0;
+  transition: max-height .2s ease-out;
+}
+
+/* menu icon */
+
+.header .menu-icon {
+  cursor: pointer;
+  float: right;
+  padding: 28px 20px;
+  position: relative;
+  user-select: none;
+}
+
+.header .menu-icon .nav-icon {
+  background: #333;
+  display: block;
+  height: 2px;
+  position: relative;
+  transition: background .2s ease-out;
+  width: 18px;
+}
+
+.header .menu-icon .nav-icon:before,
+.header .menu-icon .nav-icon:after {
+  background: #333;
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all .2s ease-out;
+  width: 100%;
+}
+
+.header .menu-icon .nav-icon:before {
+  top: 5px;
+}
+
+.header .menu-icon .nav-icon:after {
+  top: -5px;
+}
+
+/* menu btn */
+
+.header .menu-btn {
   display: none;
 }
-.topnav > .logo {
-  color: #535bf2;
-  display: block;
-}
-/* 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+
+.header .menu-btn:checked ~ .menu {
+  max-height: 240px;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  text-align: center;
+.header .menu-btn:checked ~ .menu-icon .nav-icon {
+  background: transparent;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+.header .menu-btn:checked ~ .menu-icon .nav-icon:before {
+  transform: rotate(-45deg);
+  top:0;
 }
 
-.card {
-  padding: 2em;
+.header .menu-btn:checked ~ .menu-icon .nav-icon:after {
+  transform: rotate(45deg);
+  top:0;
 }
 
-.read-the-docs {
-  color: #888;
-}
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+/* 48em = 768px @ 16pt font */
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@media (min-width: 1040px) {
+  .header li {
+    float: left;
   }
-  a:hover {
-    color: #747bff;
+  .header li a {
+    padding: 20px 30px;
   }
-  button {
-    background-color: #f9f9f9;
+  .header .menu {
+    clear: none;
+    float: right;
+    max-height: none;
   }
-} */
-@media screen and (max-width: 1040px) {
-  
-/* Header */
-.hamburger-menu {
-  --x-width: calc(var(--hamburger-height) * 1.41421356237);
-  display: flex;
-  flex-direction: column;
-  gap: var(--hamburger-gap);
-  width: max-content;
-  position: absolute;
-  top: var(--hamburger-margin);
-  right: var(--hamburger-margin);
-  z-index: 2;
-  cursor: pointer;
-}
-.hamburger-menu::before, 
-.hamburger-menu::after,
-.hamburger-menu input {
-  content: "";
-  width: var(--bar-width);
-  height: var(--bar-height);
-  background-color: black;
-  border-radius: 1000px;
-  transition: opacity var(--animation-timing),
-  width var(--animation-timing), rotate var(--animation-timing),
-  translate var(--animation-timing), background-color var(--animation-timing);
-  transform-origin: left center;
-}
-.hamburger-menu input {
-  appearance: none;
-  padding: 0;
-  margin: 0;
-  outline: 0;
-  pointer-events: none;
-}
-.hamburger-menu:has(input:checked)::before {
-  rotate: 45deg; 
-  width: var(--x-width);
-  translate: 0 calc(var(--bar-height) / -2);
-}
-.hamburger-menu input:checked {
-  opacity: 0;
-  width: 0;
-}
-.hamburger-menu:has(input:checked)::after {
-  rotate: -45deg; 
-  width: var(--x-width);
-  translate: 0 calc(var(--bar-height) / 2);
-}
-.sidebar {
-  transition: translate var(--animation-timing);
-  translate: -100%; 
-  padding-top: calc(var(--hamburger-height) + var(--hamburger-margin));
-  width: 100%;
-  height: 100vh;
-}
-.topnav .sidebar ul div a {
-  text-align: center;
-}
-.hamburger-menu:has(input:checked) + .sidebar {
-  translate: 0; 
-}
+  .header .menu-icon {
+    display: none;
+  }
 }
